增加筛选条功能
增加筛选条功能

--- a/Gte/app/src/main/res/layout/city_item.xml
+++ b/Gte/app/src/main/res/layout/city_item.xml
@@ -5,6 +5,8 @@
     <TextView
         android:id="@id/city_name"
         android:layout_width="match_parent"
-        android:layout_height="30dp" />
+        android:layout_height="30dp"
+        android:background="#BFBFBF"
+        android:textColor="#000000"/>
 
 </LinearLayout>
