--- a/Gte/app/src/main/res/layout/city_listlayout.xml
+++ b/Gte/app/src/main/res/layout/city_listlayout.xml
@@ -2,12 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <ListView
+    <com.example.administrator.gte.newview.IndexableListView
         android:id="@id/city_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
 
-    </ListView>
+        >
+
+    </com.example.administrator.gte.newview.IndexableListView>
+
 
 
 
