--- a/Gte/app/src/main/res/layout/popview.xml
+++ b/Gte/app/src/main/res/layout/popview.xml
@@ -45,7 +45,7 @@
             android:text="夜宵"/>
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:text="退出"
             android:gravity="end"/>
 
