--- a/app/src/main/res/layout/drawer_main.xml
+++ b/app/src/main/res/layout/drawer_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.example.j.gte.SlidingMenu
+<com.example.j.gte.OtherClass.SlidingMenu
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
@@ -19,4 +19,4 @@
 
 
     </LinearLayout>
-</com.example.j.gte.SlidingMenu>
+</com.example.j.gte.OtherClass.SlidingMenu>
